# UI-Final-Project

cswk/: CMakeLists.txt  Compliance.cpp  Compliance.hpp  README.md  dashboard.cpp  dashboard.hpp  dataset.cpp  dataset.hpp  main.cpp  model.cpp  model.hpp  new.hpp  overview.cpp  overview.hpp  overviewChanges.cpp  pollutant.cpp  pollutant.hpp  pop.cpp  pop.hpp  window.cpp  window.hpp
cswk/translation/: translations_en.ts  translations_en_GB.ts  translations_es.qm  translations_es.ts
solution/: dataset.cpp
